--- a/jstext/index.html
+++ b/jstext/index.html
@@ -2,6 +2,7 @@
 <html ng-app="jstext">
 <head lang="en">
     <meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
     <title>JS Text Engine</title>
 
     <script src="js/jstext-ext.js"></script>
