Add first version of mumu input web app

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>cbartsch.github.io</title>
 </head>
 <body>
-	<a href="jstext/">JS Text</a>
+	<h1><a href="jstext/">JS Text</a></h1>
+	<h1><a href="jstext/">MuMu Input Web App</a></h1>
 </body>
 </html>
