--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 	<h1><a href="jstext/">JS Text</a></h1>
-	<h1><a href="jstext/">MuMu Input Web App</a></h1>
+	<h1><a href="mumuinput/">MuMu Input Web App</a></h1>
 </body>
 </html>
