--- a/mumuinput/index.html
+++ b/mumuinput/index.html
@@ -6,22 +6,31 @@
     <title>WebController</title>
     <script data-main="js/app.js" src="js/require.js" ></script>
     <link rel="stylesheet" href="css/style.css">
+    <link href='https://fonts.googleapis.com/css?family=Exo+2' rel='stylesheet' type='text/css'>
 </head>
 <body>
     <div id="portrait-warning" class="portrait"></div>
 
     <div id="button-row">
-        <div class="button left" id="connect" ><span class="v-center">Connect</span></div>
+        <div class="medium-button left" id="connect" ><span class="v-center">Connect</span></div>
         <label class="left"><span id="timer" class="v-center">Timer</span></label>
         <label class="left"><span class="v-center">Deaths: <span id="deaths">0</span></span></label>
-        <div class="button left" id="ping" ><span class="v-center">Flash</span></div>
-        <div class="button left" id="settings" ><span class="v-center">Settings</span></div>
+        <div class="medium-button left" id="ping" >
+            <img src="img/icons/flash.png">
+        </div>
+        <div class="medium-button left" id="settings" >
+            <img src="img/icons/settings.png">
+        </div>
         <div class="clear"></div>
     </div>
 
     <div id="input-area">
-        <div id="break" class="button left no-hover"><span class="v-center">Break</span></div>
-        <div id="thrust" class="button right no-hover"><span class="v-center">Thrust</span></div>
+        <div id="break" class="big-button left no-hover">
+            <img src="img/icons/break.png">
+        </div>
+        <div id="thrust" class="big-button right no-hover">
+            <img src="img/icons/thrust.png">
+        </div>
     </div>
 
     <div id="settings-dialog" class="dialog-container hidden">
@@ -30,9 +39,9 @@
             <input type="text" id="host-name" class="input">
 
             <label for="username" class="label">Username</label>
-            <input  type="text" id="username" class="input">
+            <input type="text" id="username" class="input">
 
-            <div class="button close">Close</div>
+            <div class="small-button close">Close</div>
         </div>
     </div>
 
