--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 	<h1><a href="jstext/">JS Text Adventure</a></h1>
 	<h1><a href="mumuinput/">MuMu Input Web App</a></h1>
 	<h1><a href="TrollCube/">TrollCube Unity Web Game</a></h1>
+	<h1><a href="WebRtcTest/">WebRTC test page</a></h1>
 </body>
 </html>
