--- a/WebRtcTest/index.html
+++ b/WebRtcTest/index.html
@@ -52,8 +52,8 @@
       navigator.mediaDevices.getUserMedia({audio: false, video: true})
         .then(function(result) {
           resultArea.innerText = "Result: " + result
-          resultArea.innerText += ", " + result.getVideoTracks() 
-          resultArea.innerText += ", " + JSON.stringify(result)
+         // resultArea.innerText += ", " + result.getVideoTracks() 
+         // resultArea.innerText += ", " + JSON.stringify(result)
           if(!video.srcObject) {
             video.srcObject = result
           }
