--- a/WebRtcTest/index.html
+++ b/WebRtcTest/index.html
@@ -52,10 +52,10 @@
       navigator.mediaDevices.getUserMedia({audio: false, video: true})
         .then(function(result) {
           resultArea.innerText = "Result: " + result
-         // resultArea.innerText += ", " + result.getVideoTracks() 
-         // resultArea.innerText += ", " + JSON.stringify(result)
+          resultArea.innerText += ", " + result.getVideoTracks() 
+          resultArea.innerText += ", " + JSON.stringify(result)
           if(!video.srcObject) {
-            video.srcObject = result
+           // video.srcObject = result
           }
           }).catch(function(err) { resultArea.innerText = "Error: " + err + " - " + err.name + " - " + err.message })
     } else {
