--- a/WebRtcTest/index.html
+++ b/WebRtcTest/index.html
@@ -48,7 +48,7 @@
     })
     
 
-    if(navigator && navigator.mediaDevices && navigator.mediaDevices.getUserMedia) {
+    if(false && navigator && navigator.mediaDevices && navigator.mediaDevices.getUserMedia) {
       navigator.mediaDevices.getUserMedia({audio: false, video: true})
         .then(function(result) {
           resultArea.innerText = "Result: " + result
