--- a/WebRtcTest/index.html
+++ b/WebRtcTest/index.html
@@ -51,9 +51,9 @@
     if(navigator && navigator.mediaDevices && navigator.mediaDevices.getUserMedia) {
       navigator.mediaDevices.getUserMedia({audio: false, video: { facingMode: { exact: "environment" } }})
         .then(function(result) {
-         // resultArea.innerText = "Result: " + result
-         // resultArea.innerText += ", " + result.getVideoTracks() 
-         // resultArea.innerText += ", " + JSON.stringify(result)
+          resultArea.innerText = "Result: " + result
+          try { resultArea.innerText += ", " + result.getVideoTracks() } catch(err) {}
+          try { resultArea.innerText += ", " + JSON.stringify(result) } catch(err) {}
           if(!video.srcObject) {
             video.srcObject = result
           }
