--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>cbartsch.github.io</title>
 </head>
 <body>
+	<h1><a href="TIP/">The Incredible Platformer</a></h1>
 	<h1><a href="jstext/">JS Text Adventure</a></h1>
 	<h1><a href="mumuinput/">MuMu Input Web App</a></h1>
 	<h1><a href="TrollCube/">TrollCube Unity Web Game</a></h1>
