--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 	<h1><a href="TIP/">The Incredible Platformer</a></h1>
+	<h1><a href="IsoP/">The Isocredible Platformer</a></h1>
 	<h1><a href="jstext/">JS Text Adventure</a></h1>
 	<h1><a href="mumuinput/">MuMu Input Web App</a></h1>
 	<h1><a href="TrollCube/">TrollCube Unity Web Game</a></h1>
