Update IsoP game

--- a/IsoP/index.html
+++ b/IsoP/index.html
@@ -6,6 +6,19 @@
     <title>Unity WebGL Player | IsoPlatformer</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-65751643-9"></script>
+    <script>
+      console.log("init gtag");
+
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-65751643-9');
+    </script>
+
     <script src="TemplateData/UnityProgress.js"></script>
     <script src="Build/UnityLoader.js"></script>
     <script>
