Update index page and add beatlib docs

--- a/index.html
+++ b/index.html
@@ -3,13 +3,40 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>cbartsch.github.io</title>
+    <style type="text/css">
+        li {
+            font-size: 1.5em;
+        }
+    </style>
 </head>
 <body>
-	<h1><a href="TIP/">The Incredible Platformer</a></h1>
-	<h1><a href="IsoP/">The Isocredible Platformer</a></h1>
-	<h1><a href="jstext/">JS Text Adventure</a></h1>
-	<h1><a href="mumuinput/">MuMu Input Web App</a></h1>
-	<h1><a href="TrollCube/">TrollCube Unity Web Game</a></h1>
-	<h1><a href="WebRtcTest/">WebRTC test page</a></h1>
+        <h1>The Incredible Platformer</h1>
+        <ul>
+            <li><a href="https://apps.apple.com/us/app/the-incredible-platformer/id1347057729">Apple App Store</a></li>
+            <li><a href="https://play.google.com/store/apps/details?id=at.impossibru.TIP">Google Play</a></li>
+            <li><a href="https://www.kongregate.com/games/ImpossibruGames/the-incredible-platformer">Kongregate</a></li>
+            <li><a href="https://www.newgrounds.com/portal/view/706745">Newgrounds</a></li>
+            <li><a href="TIP/">WebGL build</a></li>
+        </ul>
+
+        <h1>IsoMaze</h1>
+        <ul>
+            <li><a href="https://play.google.com/apps/testing/at.impossibru.IsoPlatformer">Google Play (beta)</a></li>
+            <li><a href="IsoP/">WebGL build</a></li>
+        </ul>
+
+        <h1>BeatLib</h1>
+        <ul>
+            <li><a href="https://github.com/cbartsch/BeatLib">GitHub Repository</a></li>
+            <li><a href="beatlib/doc/index.html">Documentation</a></li>
+        </ul>
+
+        <h1>Other Stuff</h1>
+        <ul>
+            <li><a href="jstext/">JS Text Adventure</a></li>
+            <li><a href="mumuinput/">MuMu Input Web App</a></li>
+            <li><a href="TrollCube/">TrollCube Unity Web Game</a></li>
+            <li><a href="WebRtcTest/">WebRTC test page</a></li>
+        </ul>
 </body>
 </html>
