--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 
         <h1>IsoMaze</h1>
         <ul>
-            <li><a href="https://play.google.com/apps/testing/at.impossibru.IsoPlatformer">Google Play (beta)</a></li>
+            <li><a href="https://testflight.apple.com/join/7hxf8z15">Apple App Store (TestFlight)</a>
+            <li><a href="https://play.google.com/apps/testing/at.impossibru.IsoPlatformer">Google Play (beta)</a></li></li>
             <li><a href="IsoP/">WebGL build</a></li>
         </ul>
 
