--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <li><a href="TIP/">WebGL build</a></li>
         </ul>
 
-        <h1>IsoMaze</h1>
+        <h1>TwistoMaze</h1>
         <ul>
             <li><a href="https://testflight.apple.com/join/7hxf8z15">Apple App Store (TestFlight)</a>
             <li><a href="https://play.google.com/apps/testing/at.impossibru.IsoPlatformer">Google Play (beta)</a></li></li>
