New links for TwistoMaze

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
         <ul>
             <li><a href="https://testflight.apple.com/join/7hxf8z15">Apple App Store (TestFlight)</a>
             <li><a href="https://play.google.com/apps/testing/at.impossibru.IsoPlatformer">Google Play (beta)</a></li></li>
+            <li><a href="https://www.kongregate.com/games/ImpossibruGames/twistomaze">Kongregate</a></li>
+            <li><a href="https://www.newgrounds.com/portal/view/751558">Newgrounds</a></li>
             <li><a href="IsoP/">WebGL build</a></li>
         </ul>
 
