Update index page

--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
     </style>
 </head>
 <body>
+        <h1>TwistoMaze</h1>
+        <ul>
+            <li><a href="https://testflight.apple.com/join/7hxf8z15">Apple App Store (TestFlight)</a>
+            <li><a href="https://play.google.com/store/apps/details?id=at.impossibru.IsoPlatformer">Google Play</a></li></li>
+            <li><a href="https://www.kongregate.com/games/ImpossibruGames/twistomaze">Kongregate</a></li>
+            <li><a href="https://www.newgrounds.com/portal/view/751558">Newgrounds</a></li>
+            <li><a href="IsoP/">WebGL build</a></li>
+        </ul>
+
         <h1>The Incredible Platformer</h1>
         <ul>
             <li><a href="https://apps.apple.com/us/app/the-incredible-platformer/id1347057729">Apple App Store</a></li>
@@ -18,16 +27,6 @@
             <li><a href="https://www.newgrounds.com/portal/view/706745">Newgrounds</a></li>
             <li><a href="TIP/">WebGL build</a></li>
         </ul>
-
-        <h1>TwistoMaze</h1>
-        <ul>
-            <li><a href="https://testflight.apple.com/join/7hxf8z15">Apple App Store (TestFlight)</a>
-            <li><a href="https://play.google.com/apps/testing/at.impossibru.IsoPlatformer">Google Play (beta)</a></li></li>
-            <li><a href="https://www.kongregate.com/games/ImpossibruGames/twistomaze">Kongregate</a></li>
-            <li><a href="https://www.newgrounds.com/portal/view/751558">Newgrounds</a></li>
-            <li><a href="IsoP/">WebGL build</a></li>
-        </ul>
-
         <h1>BeatLib</h1>
         <ul>
             <li><a href="https://github.com/cbartsch/BeatLib">GitHub Repository</a></li>
