--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
         <h1>TwistoMaze</h1>
         <ul>
-            <li><a href="https://testflight.apple.com/join/7hxf8z15">Apple App Store (TestFlight)</a>
+            <li><a href="https://apps.apple.com/us/app/twistomaze/id1500792067">Apple App Store</a>
             <li><a href="https://play.google.com/store/apps/details?id=at.impossibru.IsoPlatformer">Google Play</a></li></li>
             <li><a href="https://www.kongregate.com/games/ImpossibruGames/twistomaze">Kongregate</a></li>
             <li><a href="https://www.newgrounds.com/portal/view/751558">Newgrounds</a></li>
