Add slippipedia link

--- a/index.html
+++ b/index.html
@@ -20,7 +20,13 @@
     </style>
 </head>
 <body>
-	<h1>Chrisu's Games</h1>
+	<h1>Chrisu's Apps & Games</h1>
+
+    <h2>Slippipedia (2021)</h2>
+    <ul>
+        <li><a href="https://github.com/cbartsch/Slippipedia">GitHub</a>
+        <li><a href="https://github.com/cbartsch/Slippipedia/releases">Releases / Downloads</a></li></li>
+    </ul>
 
     <h2>TwistoMaze (2020)</h2>
     <ul>
