--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 <body>
 	<h1>Chrisu's Apps & Games</h1>
 
+    <h2><a href="portfolio">Portfolio Web App (2021)</a></h2>
+
     <h2>Slippipedia (2021)</h2>
     <ul>
         <li><a href="https://github.com/cbartsch/Slippipedia">GitHub</a>
