Update portfolio web app

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -47,7 +47,7 @@
      <!-- <img src="felgo-logo.png" width="150" height="150" style="display:block; margin-bottom: 10px;"></img>-->
       <strong>Loading WebAssembly app...<!--PortfolioWebApp--></strong>
       <div id="qtstatus"></div>
-      <noscript>This app requires JavaScript. (<a href="..">Scriptless version</a>)</noscript>
+      <noscript>This app requires JavaScript. (<a href="noscript">Scriptless version</a>)</noscript>
     </center>
   </figure>
   <canvas id="qtcanvas" oncontextmenu="event.preventDefault()" contenteditable="true"></canvas>
