Add new Blockoban WebGL build (Qt 6)

--- a/index.html
+++ b/index.html
@@ -52,12 +52,14 @@
     <ul>
         <li><a href="https://apps.apple.com/us/app/electron/id1347663193">Apple App Store</a></li>
     	<li><a href="https://play.google.com/store/apps/details?id=at.impossibru.electron">Google Play</a></li>
+        <li><a href="Electron/appElectron.html">WebGL build</a></li>
     </ul>
 
     <h2>Impossibru's Blockoban (2013)</h2>
     <ul>
         <li><a href="https://apps.apple.com/app/id1450537998">Apple App Store</a></li>
     	<li><a href="https://play.google.com/store/apps/details?id=at.impossibru.blockoban">Google Play</a></li>
+        <li><a href="Blockoban/">WebGL build</a></li>
     </ul>
 
     <h2>Boolitaire (2012)</h2>
