--- a/Blockoban/index.html
+++ b/Blockoban/index.html
@@ -3,41 +3,44 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Blockoban</title>
+
+    <!--Set visual viewport size for mobile devices to the device size,
+        witch results in a scale of 1 and a 1:1 mapping between CSS pixels
+        and Qt device independent pixels. -->
+    <meta name="viewport" content="width=device-width, height=device-height, user-scalable=0"/>
+
+    <title>appBlockoban</title>
     <style>
-      html, body { padding: 0; margin : 0; overflow:hidden; height:100%; width:100%;  }
-      /* the canvas *must not* have any border or padding, or mouse coords will be wrong */
-      canvas { border: 0px none; background-color: white; height:100%; width:100%;  }
-      /* The contenteditable property is set to true for the canvas in order to support
-         clipboard events. Hide the resulting focus frame and set the cursor back to
-         the default cursor. */
-      canvas { outline: 0px solid transparent; caret-color: transparent; cursor:default }
+      /* Make the html body cover the entire (visual) viewport with no scroll bars. */
+      html, body {
+        padding: 0; margin: 0; overflow: hidden; height: 100%;
+        color: white;
+        background-color: black;
+      }
+      #screen { width: 100%; height: 100%; }
     </style>
   </head>
   <body onload="init()">
     <figure style="overflow:visible;" id="qtspinner">
       <center style="margin-top:1.5em; line-height:150%">
-        <img src="felgo-logo.png" width="200" height="200" style="display:block"></img>
+        <img src="icon.jpg" width="705" height="344" style="display:block"></img>
         <strong>Blockoban</strong>
-        <div hidden id="qtstatus"></div>
+        <div id="qtstatus"></div>
         <noscript>JavaScript is disabled. Please enable JavaScript to use this application.</noscript>
       </center>
     </figure>
-    <canvas id="qtcanvas" oncontextmenu="event.preventDefault()" contenteditable="true"></canvas>
+    <div id="screen"></div>
 
     <script type='text/javascript'>
+        let qtLoader = undefined;
         function init() {
           var spinner = document.querySelector('#qtspinner');
-          var canvas = document.querySelector('#qtcanvas');
+          var canvas = document.querySelector('#screen');
           var status = document.querySelector('#qtstatus')
 
-          var qtLoader = QtLoader({
-              environment: {
-                  QML_DISABLE_DISK_CACHE: 1
-              },
+          qtLoader = new QtLoader({
               canvasElements : [canvas],
               showLoader: function(loaderStatus) {
-                  return;
                   spinner.style.display = 'block';
                   canvas.style.display = 'none';
                   status.innerHTML = loaderStatus + "...";
@@ -48,7 +51,6 @@
                   canvas.style.display = 'none';
               },
               showExit: function() {
-                return;
                   status.innerHTML = "Application exit";
                   if (qtLoader.exitCode !== undefined)
                       status.innerHTML += " with code " + qtLoader.exitCode;
@@ -62,7 +64,7 @@
                   canvas.style.display = 'block';
               },
           });
-          qtLoader.loadEmscriptenModule("Blockoban");
+          qtLoader.loadEmscriptenModule("appBlockoban");
       }
     </script>
     <script type="text/javascript" src="qtloader.js"></script>
