--- a/Electron/index.html
+++ b/Electron/index.html
@@ -18,17 +18,37 @@
         background-color: black;
       }
       #screen { width: 100%; height: 100%; }
+      #appname { font-size: 24pt; text-align: center; }
+      #loadingtext { width: 100%; bottom: 0px; position: absolute; background-color: black; opacity: 0.9; }
+      #qtspinner { width: 100%; height: 100%; position: relative;}
+      #appicon { width: 100%; height: 100%; object-fit: cover; } 
+      #qtstatus { text-align: center; }
     </style>
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-65751643-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-65751643-1');
+
+      gtag("event", "screen_view", {
+        "screen_name": "Main WASM",
+        "app_name": "Electron"
+      });
+    </script>
   </head>
   <body onload="init()">
-    <figure style="overflow:visible;" id="qtspinner">
-      <center style="margin-top:1.5em; line-height:150%">
-        <img src="icon.png" width="360" height="240" style="display:block"></img>
-        <strong>Electron</strong>
-        <div id="qtstatus"></div>
+    <div id="qtspinner">
+      <img src="icon.png" id="appicon" style="display:block"></img>
+      <div id="loadingtext">
+        <p id="appname">Electron</p>
+        <p id="qtstatus">Loading...</p>
         <noscript>JavaScript is disabled. Please enable JavaScript to use this application.</noscript>
-      </center>
-    </figure>
+      </div>
+    </div>
     <div id="screen"></div>
 
     <script type='text/javascript'>
@@ -43,7 +63,7 @@
               showLoader: function(loaderStatus) {
                   spinner.style.display = 'block';
                   canvas.style.display = 'none';
-                  status.innerHTML = loaderStatus + "...";
+                 // status.innerHTML = loaderStatus + "...";
               },
               showError: function(errorText) {
                   status.innerHTML = errorText;
