Update Blockoban WebGL build

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
     <ul>
         <li><a href="https://apps.apple.com/us/app/electron/id1347663193">Apple App Store</a></li>
     	<li><a href="https://play.google.com/store/apps/details?id=at.impossibru.electron">Google Play</a></li>
+        <li><a href="https://impossibru.itch.io/electron">itch.io</a></li>
         <li><a href="Electron/">WebGL build</a></li>
     </ul>
 
@@ -59,6 +60,8 @@
     <ul>
         <li><a href="https://apps.apple.com/app/id1450537998">Apple App Store</a></li>
     	<li><a href="https://play.google.com/store/apps/details?id=at.impossibru.blockoban">Google Play</a></li>
+        <li><a href="https://www.newgrounds.com/portal/view/881340">Newgrounds</a></li>
+        <li><a href="https://impossibru.itch.io/blockoban">itch.io</a></li>
         <li><a href="Blockoban/">WebGL build</a></li>
     </ul>
 
